--- a/index.html
+++ b/index.html
@@ -3658,7 +3658,7 @@
                                 </div>
                                 <div class="toggle active" id="toggle-cel">°C</div>
                                 <div class="toggle two" id="toggle-far">°F</div>
-                                <p class="label">📍 West-Coast</p>
+                                <p class="label">📍 青岛</p>
                             </div>
                         </div>
                     </div>
